# HerculesPi

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
src/: config.rs  installer.rs  main.rs  sensors.rs
